fix(profilPage): suppression du overflow sur l'axe y :lipstick:

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,14 +2,13 @@
 .layout {
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 .layout__container {
     margin: 0 auto;
     display: flex;
     height: 100%;
     justify-content: space-between;
-    position: sticky;
-    top: 50px;
 }
 .left {
     width: 100%;
